fix(v2): avoid horizontal scrolling when long lines of code (#4241)
* fix: avoid horizontal scrolling when long lines of code

* Simplify solution

--- a/packages/docusaurus-theme-classic/src/theme/DocPage/styles.module.css
+++ b/packages/docusaurus-theme-classic/src/theme/DocPage/styles.module.css
@@ -14,6 +14,11 @@
     display: flex;
   }
 
+  .docMainContainer {
+    flex-grow: 1;
+    max-width: calc(100% - var(--doc-sidebar-width));
+  }
+
   .docSidebarContainer {
     width: var(--doc-sidebar-width);
     margin-top: calc(-1 * var(--ifm-navbar-height));
@@ -54,10 +59,6 @@
   html[data-theme='dark'] .collapsedDocSidebar:hover,
   html[data-theme='dark'] .collapsedDocSidebar:focus {
     background-color: var(--collapse-button-bg-color-dark);
-  }
-
-  .docMainContainer {
-    flex-grow: 1;
   }
 
   .docItemWrapperEnhanced {
